Fixed centering and alignment issues

--- a/RelaxrBlog/css/styles.css
+++ b/RelaxrBlog/css/styles.css
@@ -54,11 +54,16 @@ li a:hover {
 	font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
 	}
 
-.columns {
+.colholder {
+	width: 1024px;
 	margin:0 auto;
+	}
+
+.columns {
 	display:inline-block;
 	padding:20px;
 	box-sizing:border-box;
+	vertical-align:top;
 	}
 
 .left {
@@ -72,10 +77,10 @@ li a:hover {
 	width: 960px;
 	}
 
-.left p {
+f.left p {
 	color: #848484;
  	line-height: 20px;
-	}
+}
 	
 .firstcharacter { 
 	float: left; font-size: 64px; line-height: 60px; padding-top: 4px; padding-right: 8px; padding-left: 3px; 
@@ -133,6 +138,7 @@ li a:hover {
 
 footer {
 	background-color: #000;	
+	padding:10px;
 	}
 
 footer h1 {
